# printf

./: CMakeLists.txt  Makefile  TEST_uni.c  a.out  file.txt  main.c  maintest.c  maintest_1.0.c  new_test.c  print_f.h  print_f.h.gch  text_uni.c
pf2/src/parser/: manage_parseur.c
src/: handle_option.c  main_pf.c  main_pfff.c  pf_2.h  print_set.c  test.c  utils_main.c
src/buffer/: head_buffer.c
src/data/: manage_before_printer.c
src/data/nb/float/: head_double.c
src/data/nb/integer/: head_integer_signed.c  head_interger_n.c
src/data/nb/unsigned/: head_integer_unsigned.c  utils_unsigned_integer.c
src/data/nb/unsigned_variation/: head_unsigned_binairy.c  head_unsigned_hexa.c  head_unsigned_octal.c  head_unsigned_ptr.c
src/data/text/char/: head_char.c  head_char_CHAR.c
src/data/text/other/: head_percent.c
src/data/text/str/: manage_str.c
src/libft/includes/: libft.h
src/libft/lib/: check_char_into_str.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lst_reverse.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_put_uni.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_str_rev.c  ft_strcat.c  ft_strchr.c  ft_strchr_dup.c  ft_strchr_how_many.c  ft_strchr_len.c  ft_strclr.c  (+29 more)
src/maker_out/: manage_maker.c  printer.c  utilities_printer.c
src/manage_data/: manage_decimal.c  manage_unsigned.c
src/manage_data/manage_decimal/: handle_before_printer.c  manage_decimal.c  manage_hexa.c  manage_octal.c  manage_unsigned.c  utilities_decimal.c
src/manage_data/manage_decimal/utils_decimals/: manage_unsigned.c  utilities_decimal.c
src/manage_data/manage_text/: manage_char.c
src/parser/: main_parser.c  manage_flag.c
src/parseur/: head_parseur.c  parseur_flag.c  parseur_utils.c
src/printer/: function_printer.c  head_printer.c  manage_printer.c  printer.c  utilities_printer.c  utils_printer.c
src/utils/: utilities.c  utilities_main.c
src2/: main_pfff.c  pf_2.h  utils_main.c
src2/buffer/: head_buffer.c
src2/data/: manage_before_printer.c
src2/data/nb/float/: head_double.c
src2/data/nb/integer/: head_integer_signed.c  head_interger_n.c
src2/data/nb/unsigned/: head_integer_unsigned.c  utils_unsigned_integer.c
src2/data/nb/unsigned_variation/: head_unsigned_binairy.c  head_unsigned_hexa.c  head_unsigned_octal.c  head_unsigned_ptr.c
src2/data/text/char/: head_char_CHAR.c
src2/data/text/str/: manage_str.c
src2/manage_buffer/: head_buffer.c
src2/manage_data/nb/: manage_before_printer.c  manage_integer_before_printer.c
src2/manage_data/nb/integer/: head_integer_signed.c
src2/manage_data/nb/unsigned/: head_integer_unsigned.c  utils_unsigned_integer.c
src2/manage_data/text/str/: manage_str.c
src2/manage_parseur/: head_parseur.c  parseur_head.c  parseur_manage_percent.c  parseur_percent_manage_flag.c  parseur_utils.c
src2/nb/integer/signed/: manage_integer_signed.c
src2/parseur/: head_parseur.c  parseur_flag.c  parseur_flag_utils.c  parseur_head.c  parseur_manage_percent.c  parseur_percent_manage_flag.c  parseur_utils.c
src2/printer/: function_printer.c  head_printer.c  manage_before_printer.c  utils_printer.c
src2/printer/printer_nb/: function_printer.c  head_printer.c
